some responsive style fixes. Slider buttons and letter spacing for the slider. Bottom corner of the header is gone now due to issues with positioning on deployment.

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -5,14 +5,14 @@
   align-items: center;
   background-image: linear-gradient(
       to right bottom,
-      rgba(13, 202, 240, 0.75),
-      rgba(13, 202, 240, 0.75)
+      rgba(13, 202, 240, 0.82),
+      rgba(13, 202, 240, 0.82)
     ),
     url(../img/code.jpg);
   height: 100vh;
   background-position: top;
   background-size: cover;
-  clip-path: polygon(0% 0%, 100% 22%, 100% 100%, 0% 75%); 
+  clip-path: polygon(0% 0%, 100% 22%, 100% 100%, 0% 100%); 
   /* margin: 0px 10px 0px 10px; */
 
 }
